@@ -1,3 +1,12 @@
+2001-10-10  Akim Demaille  <akim@epita.fr>
+
+	* lib/autoconf/general.m4 (_AC_INCLUDES_DEFAULT_REQUIREMENTS)
+	(AC_INCLUDES_DEFAULT): Move to...
+	* lib/autoconf/headers.m4: here.
+	* lib/autoconf/types.m4: Comment changes.
+	* doc/autoconf.texi: Specify where the default includes are used
+	in the macro prototypes.
+
 2001-10-09  Akim Demaille  <akim@epita.fr>
 
 	* lib/autoconf/autoconf.m4 (m4_patsubst, m4_regexp): New
